fixed issue with navbar between 576px and 767px not fitting properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* --- navbar ---*/
 
 .container {
+    width: auto;
     background-color: lightseagreen;
     font-family: "Trade Winds";
     text-align: center;
